Fix the navbar dropdown menu to make it more readable in different sizes of screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,16 +44,11 @@ h1 {
 }
 
 
-
-
 /* Navbar */
 .navbar {
     background-color: var(--nav-color);
-    height: 113px;
+    text-align: center;
 }
-
-
-
 
 
 /* Header */
